# core-framework

./: .core_models_cache.json  .gitignore  README.md  main.py  publish.sh  pyproject.toml  release.sh
core/: __init__.py  app.py  auth.py  choices.py  config.py  database.py  datetime.py  dependencies.py  exceptions.py  fields.py  middleware.py  models.py  permissions.py  querysets.py  realtime.py  registry.py  relations.py  routing.py  serializers.py  storage.py  tenancy.py  validation.py  validators.py  views.py
core/admin/: __init__.py  _typing.py  collectstatic.py  defaults.py  discovery.py  event_tracking.py  exceptions.py  infrastructure.py  log_handler.py  middleware.py  models.py  ops_views.py  options.py  permissions.py  resource_inventory.py  router.py  serializers.py  site.py  types.py  views.py  ws_events.py
core/auth/: __init__.py  backends.py  base.py  decorators.py  hashers.py  helpers.py  middleware.py  models.py  permissions.py  schemas.py  tokens.py  views.py
core/cli/: __init__.py  interactive.py  main.py  project_init.py
core/deployment/: __init__.py  docker.py  kubernetes.py  pm2.py
core/messaging/: __init__.py  avro.py  base.py  config.py  decorators.py  registry.py  topics.py  tracking.py  workers.py
core/migrations/: __init__.py  analyzer.py  cli.py  (+4 more)
docs/: 01-quickstart.md  02-settings.md  02-viewsets.md  03-authentication.md  03-models.md  04-messaging.md  04-viewsets.md  05-auth.md  05-multi-service.md  06-auth-backends.md  06-tasks.md  07-cli.md  07-deployment.md  08-complete-example.md  08-permissions.md  09-permissions.md  09-settings.md  10-fields.md  10-migrations.md  11-permissions.md  11-relations.md  12-auth-backends.md  12-querysets.md  13-serializers.md  13-validators.md  14-querysets.md  14-validators.md  15-routing.md  16-serializers.md  17-datetime.md  18-dependencies.md  19-views.md  20-fields.md  20-middleware.md  21-replicas.md  22-soft-delete.md  23-routing.md  24-dependencies.md  25-realtime.md  26-choices.md  (+24 more)
example/: __init__.py  app.py  auth.py  main.py  models.py  schemas.py  settings.py  views.py
services/: wrapper.py
stride/: __init__.py  app.py  choices.py  config.py  database.py  datetime.py  dependencies.py  exceptions.py  fields.py  middleware.py  models.py  permissions.py  querysets.py  realtime.py  relations.py  routing.py  schema.py  storage.py  tenancy.py  urls.py  validation.py  validators.py  views.py
strider/: __init__.py  __main__.py  app.py  choices.py  config.py  database.py  datetime.py  dependencies.py  exceptions.py  fields.md  fields.py  middleware.py  models.py  openapi_examples.py  permissions.py  querysets.py  realtime.py  relations.py  routing.py  schema.py  serializers.py  storage.py  tenancy.py  urls.py  validation.py  validators.py  views.py
tests/: __init__.py  conftest.py  test_admin.py  test_auth_helpers.py  test_imports.py  test_issues_fixes.py  test_models.py  test_permissions.py  test_querysets.py  test_relations.py  test_routing_custom_actions.py  test_serializers.py  test_validation.py
(+406 files in other folders)
