[project]
name = "core-framework"
version = "0.12.15"
description = "Core Framework - Django-inspired, FastAPI-powered. Alta performance, baixo acoplamento, produtividade extrema."
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Core Framework Team" }
]
keywords = ["fastapi", "django", "framework", "api", "rest", "async", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Console",
]

dependencies = [
    "fastapi>=0.109.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
]

[project.scripts]
core = "core.cli:main"

[project.entry-points."pytest11"]
core = "core.testing.plugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "ipython>=8.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]
mysql = [
    "aiomysql>=0.2.0",
]
kafka = [
    "aiokafka>=0.10.0",
]
redis = [
    "redis>=5.0.0",
]
rabbitmq = [
    "aio-pika>=9.0.0",
]
messaging = [
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "aio-pika>=9.0.0",
    "croniter>=2.0.0",
]
enterprise = [
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    "aio-pika>=9.0.0",
    "croniter>=2.0.0",
    "asyncpg>=0.29.0",
]
testing = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "faker>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/SorPuti/core-framework"
Documentation = "https://github.com/SorPuti/core-framework#readme"
Repository = "https://github.com/SorPuti/core-framework"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "example"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["core", "example"]
